--- a/css/todo.css
+++ b/css/todo.css
@@ -8,6 +8,8 @@
   padding: 20px 10px;
 }
 .todo-header {
+  background-color: #fff;
+  height: 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -15,17 +17,28 @@
   padding: 10px;
 }
 .todo-radio-wrapper {
+  background-color: #fff;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   width: 100%;
-  padding: 10px 30px;
+  padding: 10px 40px;
   border-bottom: 2px solid #9e9fa5;
 }
 .todolist-wrapper {
+  top: 110px;
+  height: 420px;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   margin: 20px 10px;
+}
+.todolist-wrapper::-webkit-scrollbar {
+  width: 4px;
+}
+.todolist-wrapper::-webkit-scrollbar-thumb {
+  height: auto;
+  background-color: #9e9fa5;
+  border-radius: 10px;
 }
 .all-todo-items .todo-item {
   display: flex;
@@ -46,6 +59,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  flex-grow: 1;
 }
 .todo-title {
   flex-grow: 1;
@@ -60,21 +74,33 @@
   display: none;
 }
 .todo-label {
-  line-height:5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  border: 1px dotted #444;
-  margin: 0 5px;
+  border: 1px solid #444;
+  margin: 0 10px;
   cursor: pointer;
 }
 .todo-radio:checked + .todo-label::after {
-  content: "✔";
-  font-size: 8px;
-  width: 15px;
+  content: "";
+  width: 8px;
+  height: 8px;
   font-weight: 900;
-  color: #000;
+  background-color: #444;
+  border-radius: 50%;
 }
 .todo-item .grey-btn {
-  margin-right: 5px;
+  margin-right: 10px;
+}
+.todo-radio-wrapper input {
+  display: none;
+}
+
+.todo-radio-wrapper input:checked + label {
+  transition: color .3s ease-in-out;
+  color: #555563;
+  font-weight: 700;
 }
