--- a/css/calendar.css
+++ b/css/calendar.css
@@ -17,7 +17,7 @@
 .go-btn {
   position: absolute;
   right: 20px;
-  top: 500px;
+  top: 700px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -28,14 +28,15 @@
   height: 40px;
   border-radius: 20px;
   background-color: whitesmoke;
+  cursor: pointer;
 }
 .go-btn:active {
   background-color: #888;
   line-height: 0px;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.1s ease-in-out;
 }
 .today-todo-list {
-  height: 4.2rem;
+  height: 8.2rem;
   overflow-y: auto;
   padding: 0 40px;
 }
@@ -50,4 +51,13 @@
 .today-todo-list li {
   list-style: auto;
   margin: 5px 0;
+}
+.logo-image-wrap {
+  margin-top: 20px;
+  height: 100px;
+  width: 100%;
+  overflow: hidden;
+  background-image: url('../image/logo.png');
+  background-size: 100% auto;
+  background-repeat: no-repeat;
 }
