--- a/css/common.css
+++ b/css/common.css
@@ -9,7 +9,7 @@
   width: 100%;
   height: 100%;
   max-width: 365px;
-  min-height: 612px; /* 812 */
+  min-height: 812px;
   margin: 20px auto;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   position: relative;
@@ -45,6 +45,11 @@
   cursor: pointer;
 }
 .text-input {
+  flex-grow: 1;
+  margin: 0 20px 0 0;
+}
+.text-input:focus {
+  outline: 0.5px solid #444;
   flex-grow: 1;
   margin: 0 20px 0 0;
 }
