--- a/css/common.css
+++ b/css/common.css
@@ -10,8 +10,7 @@
   height: 100%;
   max-width: 365px;
   min-height: 812px;
-  margin: 20px auto;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  margin: 20px auto 0 auto;
   position: relative;
 }
 
