--- a/css/calendar.css
+++ b/css/calendar.css
@@ -37,9 +37,9 @@
   transition: all 0.1s ease-in-out;
 }
 .today-todo-list {
-  height: 8.2rem;
+  height: 7rem;
   overflow-y: auto;
-  padding: 0 40px;
+  padding: 0 20px;
 }
 .today-todo-list::-webkit-scrollbar {
   width: 4px;
@@ -50,7 +50,6 @@
   border-radius: 10px;
 }
 .today-todo-list li {
-  list-style: auto;
   margin: 5px 0;
 }
 .logo-image {
@@ -61,4 +60,7 @@
   background-image: url('../image/logo.png');
   background-size: 100% auto;
   background-repeat: no-repeat;
+}
+.underlined {
+  text-decoration: line-through;
 }
