chore: 레이아웃 및 스크롤 관련 css 수정

--- a/css/common.css
+++ b/css/common.css
@@ -10,7 +10,7 @@
   height: 100%;
   max-width: 365px;
   min-height: 812px;
-  margin: 20px auto 0 auto;
+  margin: 0 auto;
   position: relative;
 }
 @media (min-width:366px) {
