--- a/css/todo.css
+++ b/css/todo.css
@@ -51,7 +51,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: #9E9FA5 0px 3px 8px;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
   padding: 10px 0;
   margin: 10px 0;
 }
