feat: todo페이지 수정 시 calendar페이지에도 수정사항 반영되는 기능 추가

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -40,7 +40,7 @@ html {
   transition: all 0.1s ease-in-out;
 }
 .today-todo-list {
-  height: 7rem;
+  height: 6.5rem;
   overflow-y: auto;
   padding: 0 20px;
 }
@@ -69,4 +69,5 @@ html {
 }
 .today-date-wrapper p {
   margin-left: 10px;
+  font-weight: 500;
 }
