--- a/css/common.css
+++ b/css/common.css
@@ -44,16 +44,18 @@
   border: none;
   color: #fff;
   border-radius: 2px;
+  padding: 4px 4px;
 }
 .cursor {
   cursor: pointer;
 }
 .text-input {
+  outline: 0.5px solid #565655;
   flex-grow: 1;
   margin: 0 20px 0 0;
 }
 .text-input:focus {
-  outline: 0.5px solid #444;
+  outline: 1px solid #4a4a4a;
   flex-grow: 1;
   margin: 0 20px 0 0;
 }
@@ -64,4 +66,5 @@
   background-color: #eee !important;
   border: 1px solid #444;
   color: #444;
+  padding: 2px 4px;
 }
